--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-# Hola mundo
-<body>Santo cristo redentor en moto</body>
+<title>Hola mundo</title> 
+<body>Santo cristo redentor en moto
+Ya no quiero ser ingeniero en sistemas computacionales</body>
